# functional-summer-ch13

./: exercises.hs  notes.md
hangman/: hangman.cabal
hangman/src/: Main.hs  Puzzle.hs
