name:                hangman
version:             0.1.0.0
synopsis:            Playing hangman
-- description:
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              James Santucci
maintainer:          james.santucci@gmail.com
copyright:           2017 James Santucci
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     , data/dict.txt

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split

library
  hs-source-dirs:      src
  exposed-modules:     Puzzle
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5